force-app/main/default/objects/Transaction__c/fields/Related_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_Transaction_Count__c</fullName>
    <label>Related Transaction Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>