force-app/main/default/objects/Transaction__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>