force-app/main/default/objects/Transaction__c/fields/Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Send_Status__c</fullName>
    <label>Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>