force-app/main/default/objects/Transaction__c/fields/Transaction_Line_Item_Counts__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Line_Item_Counts__c</fullName>
    <label>Transaction Line Item Counts</label>
    <summaryForeignKey>Transaction_Line_Item__c.Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>